--- a/eas.json
+++ b/eas.json
@@ -1,28 +1,22 @@
+
 {
-  "cli": {
-    "version": ">= 10.1.1"
-  },
- 
   "build": {
-    "development": {
-      "distribution": "internal",
+    "preview": {
       "android": {
         "buildType": "apk"
       }
     },
-    "preview": {
-      "distribution": "internal",
+    "preview2": {
       "android": {
-        "buildType": "app-bundle"
+        "gradleCommand": ":app:assembleRelease"
       }
     },
-    "production": {
-      "android": {
-        "buildType": "app-bundle"
-      }
-    }
-  },
-  "submit": {
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
     "production": {}
   }
 }
