--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "expo": "~51.0.17",
+    "expo-build-properties": "~0.12.3",
     "expo-constants": "~16.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
