--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-web": "~0.19.10",
     "translate": "^3.0.0"
